--- a/src/components/app.module.scss
+++ b/src/components/app.module.scss
@@ -4,3 +4,11 @@
   grid-gap: 16px;
   padding-bottom: 24px;
 }
+
+.errorMessage {
+  color: red;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+}
